--- a/Assets/WebGLTemplates/Dust/index.html
+++ b/Assets/WebGLTemplates/Dust/index.html
@@ -4,51 +4,37 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | %UNITY_WEB_NAME%</title>
-    <style>
-      .progress {
-        width: 100px;
-        height: 100px;
-        position: absolute;
-        left: 350px;
-        top: 250px;
-      }
-
-      .hidden {
-        display: none;
-      }
-    </style>
-    <script src="%UNITY_WEBGL_LOADER_URL%"></script>
+    <title>Unity WebGL Player | Dust</title>
+    <script src="Build/UnityLoader.js"></script>
     <script>
-    var gameInstance = UnityLoader.instantiate("gameContainer", "%UNITY_WEBGL_BUILD_URL%", {onProgress: UnityProgress});
+    var gameInstance = UnityLoader.instantiate("gameContainer", "Build/WebGL.json", {
+        onProgress: UnityProgress,
+        Module: {
+          onRuntimeInitialized: function () {
+            document.getElementById ("progress").style.display = "none";    
+          }
+        }});
 
     function UnityProgress(gameInstance, progress) {
-      if (!gameInstance.progress) {
-        gameInstance.progress = document.createElement("img");  
-        gameInstance.progress.className = "progress";
-        gameInstance.progress.src = "TemplateData/preloader.png";
-        gameInstance.progressStartTime = new Date ().getTime ();
-        gameInstance.prealoaderSpeed = 10;
-        gameInstance.container.appendChild(gameInstance.progress);
+      if (!gameInstance.progressText) {
+          gameInstance.progressText = document.getElementById ("progressText");
       }
-
-      var timeDiff = (new Date ().getTime () - gameInstance.progressStartTime) / 1000;
       
-      var rotation = 360 * gameInstance.prealoaderSpeed * timeDiff;
-      var transform = "rotate(" + rotation + "deg)";
-
-      gameInstance.progress.style.transform = transform;
-      gameInstance.progress.style.msTransform = transform;
-      gameInstance.progress.style.WebkitTransform = transform;
-
-      if (progress == 1)
-          gameInstance.progress.className = "hidden";
+      gameInstance.progressText.innerText = progress < 1 
+        ? Math.round (100 * progress) + "%"
+        : "Launching...";
     }
+
+
     </script>
   </head>
   
-  <body>
-    <div id="gameContainer" style="width: %UNITY_WIDTH%px; height: %UNITY_HEIGHT%px; margin: auto"></div>
+  <body style="margin:0px;">
+    <div id="gameContainer" style="width: 800px; height: 600px; margin: auto"></div>
+    <div id="progress" style="width: 800px; height: 600px; position: absolute; left:0px; top:0px;">
+      <img src="TemplateData/preloader.png" style="position:absolute; left:350px; top:250px; width: 100px; height: 100px;"/>
+      <div id="progressText" style="position: absolute; top:360px; width: 100%; text-align: center; color: #ffffff;">0%</div>
+    </div>    
   </body>
   
 </html>
